exports[`invalid(1): {\"exports\": \"./missing.js\"} 1`] = `

[Input]
  1 | {"exports": "./missing.js"}

`;

exports[`invalid(1): {\"exports\": \"./missing.js\"} 2`] = `

Message:
> 1 | {"exports": "./missing.js"}
    |             ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(10): {\"files\": [\"missing/*.js\"]} 1`] = `

[Input]
  1 | {"files": ["missing/*.js"]}

`;

exports[`invalid(10): {\"files\": [\"missing/*.js\"]} 2`] = `

Message:
> 1 | {"files": ["missing/*.js"]}
    |            ^^^^^^^^^^^^^^ The \`files\` pattern \`missing/*.js\` does not match any file or directory.

`;

exports[`invalid(11): {\"files\": [\"rules/*.JS\"]} 1`] = `

[Input]
  1 | {"files": ["rules/*.JS"]}

`;

exports[`invalid(11): {\"files\": [\"rules/*.JS\"]} 2`] = `

Message:
> 1 | {"files": ["rules/*.JS"]}
    |            ^^^^^^^^^^^^ The \`files\` pattern \`rules/*.JS\` does not match any file or directory.

`;

exports[`invalid(12): {\"files\": [\"index.js\", \"missing\"]} 1`] = `

[Input]
  1 | {"files": ["index.js", "missing"]}

`;

exports[`invalid(12): {\"files\": [\"index.js\", \"missing\"]} 2`] = `

Message:
> 1 | {"files": ["index.js", "missing"]}
    |                        ^^^^^^^^^ The \`files\` pattern \`missing\` does not match any file or directory.

`;

exports[`invalid(2): {\"exports\": {\"./rules/*\": \"./missing/*.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./rules/*": "./missing/*.js"}}

`;

exports[`invalid(2): {\"exports\": {\"./rules/*\": \"./missing/*.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./rules/*": "./missing/*.js"}}
    |                           ^^^^^^^^^^^^^^^^ Export target \`./missing/*.js\` does not exist.

`;

exports[`invalid(3): {\"exports\": {\"./rules/*\": \"./rules/*.JS\"}} 1`] = `

[Input]
  1 | {"exports": {"./rules/*": "./rules/*.JS"}}

`;

exports[`invalid(3): {\"exports\": {\"./rules/*\": \"./rules/*.JS\"}} 2`] = `

Message:
> 1 | {"exports": {"./rules/*": "./rules/*.JS"}}
    |                           ^^^^^^^^^^^^^^ Export target \`./rules/*.JS\` does not exist.

`;

exports[`invalid(4): {\"exports\": [\"./missing.js\", \"./also-missing.js\"]} 1`] = `

[Input]
  1 | {"exports": ["./missing.js", "./also-missing.js"]}

`;

exports[`invalid(4): {\"exports\": [\"./missing.js\", \"./also-missing.js\"]} 2`] = `

Message:
> 1 | {"exports": ["./missing.js", "./also-missing.js"]}
    |              ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(4): {\"exports\": [\"./missing.js\", \"./also-missing.js\"]} 3`] = `

Message:
> 1 | {"exports": ["./missing.js", "./also-missing.js"]}
    |                              ^^^^^^^^^^^^^^^^^^^ Export target \`./also-missing.js\` does not exist.

`;

exports[`invalid(5): {\"exports\": {\"import\": \"./missing.js\", \"require\": \"./missing.js\"}} 1`] = `

[Input]
  1 | {"exports": {"import": "./missing.js", "require": "./missing.js"}}

`;

exports[`invalid(5): {\"exports\": {\"import\": \"./missing.js\", \"require\": \"./missing.js\"}} 2`] = `

Message:
> 1 | {"exports": {"import": "./missing.js", "require": "./missing.js"}}
    |                        ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(6): {\"exports\": {\"import\": \"./missing-import.js\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"import": "./missing-import.js", "default": "./index.js"}}

`;

exports[`invalid(6): {\"exports\": {\"import\": \"./missing-import.js\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"import": "./missing-import.js", "default": "./index.js"}}
    |                        ^^^^^^^^^^^^^^^^^^^^^ Export target \`./missing-import.js\` does not exist.

`;

exports[`invalid(7): {\"exports\": {\"./feature\": \"./Index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./feature": "./Index.js"}}

`;

exports[`invalid(7): {\"exports\": {\"./feature\": \"./Index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./feature": "./Index.js"}}
    |                           ^^^^^^^^^^^^ Export target \`./Index.js\` does not exist.

`;

exports[`invalid(8): {\"exports\": {\"./rules/*\": \"./rules\"}} 1`] = `

[Input]
  1 | {"exports": {"./rules/*": "./rules"}}

`;

exports[`invalid(8): {\"exports\": {\"./rules/*\": \"./rules\"}} 2`] = `

Message:
> 1 | {"exports": {"./rules/*": "./rules"}}
    |                           ^^^^^^^^^ Export target \`./rules\` does not exist.

`;

exports[`invalid(9): {\"files\": [\"missing\"]} 1`] = `

[Input]
  1 | {"files": ["missing"]}

`;

exports[`invalid(9): {\"files\": [\"missing\"]} 2`] = `

Message:
> 1 | {"files": ["missing"]}
    |            ^^^^^^^^^ The \`files\` pattern \`missing\` does not match any file or directory.

`;
